website/websites/u64q/code/pystone.1.pyston.log

 Sun, 06 Feb 2022 21:18:41 GMT

COMMAND LINE:
 /usr/bin/pyston pystone.pyston 50000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "pystone.pyston", line 62
    print loops
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(loops)?
